<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".BombasActivity">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_margin="10dp"
       android:scrollbars="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">

          <TextView
              android:id="@+id/textView3"
              android:layout_width="171dp"
              android:layout_height="33dp"
              android:layout_marginTop="32dp"
              android:layout_gravity="center_horizontal"
              android:text="@string/cantidad"
              android:textAlignment="center"
              android:textSize="20sp"
              android:textColor="@color/colorAccent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent" />

          <ProgressBar
              android:id="@+id/nivel_bar"
              style="?android:attr/progressBarStyleHorizontal"
              android:layout_width="203dp"
              android:layout_height="38dp"
              android:layout_gravity="center"
              android:layout_margin="10dp"
              android:layout_marginTop="12dp"
              android:max="100"
              android:minWidth="200dp"
              android:minHeight="50dp"
              android:progress="1"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.497"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/textView3" />

          <LinearLayout
              android:id="@+id/linearLayout"
              android:layout_width="311dp"
              android:layout_height="56dp"
              android:layout_marginTop="20dp"
              android:orientation="horizontal"
              android:layout_gravity="center"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/nivel_bar">

              <TextView
                  android:id="@+id/nivel_num"
                  android:layout_width="72dp"
                  android:layout_height="match_parent"
                  android:layout_weight="1"
                  android:gravity="center_horizontal|center_vertical"
                  android:textAlignment="center"
                  android:textColor="@color/primaryText"
                  android:textSize="20sp"
                  android:textStyle="bold" />

              <ImageButton
                  android:id="@+id/btn_aumentar"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  app:srcCompat="@mipmap/ic_plus"
                  android:contentDescription="@string/plus"
                  android:onClick="setLevel"
                  android:background="@drawable/style_button"/>

              <ImageButton
                  android:id="@+id/btn_disminuir"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  app:srcCompat="@mipmap/ic_minus"
                  android:contentDescription="@string/minus"
                  android:onClick="setLevel"
                  android:background="@drawable/style_button"/>
          </LinearLayout>

          <TextView
              android:id="@+id/textView5"
              android:layout_width="161dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="16dp"
              android:text="@string/nivel"
              android:textAlignment="center"
              android:textSize="20sp"
              android:textColor="@color/primaryText"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

          <TextView
              android:id="@+id/nivel_tipo"
              android:background="@drawable/style_niveles"
              style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="8dp"
              android:text="@string/bajo"
              android:textAlignment="center"
              android:textSize="24sp"
              android:textColor="@color/primaryText"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.507"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/textView5" />

          <TextView
              android:id="@+id/textView6"
              android:layout_width="228dp"
              android:layout_height="28dp"
              android:layout_gravity="center"
              android:layout_margin="10dp"
              android:layout_marginTop="12dp"
              android:gravity="center_horizontal"
              android:text="@string/cantidad_de_valvulas"
              android:textAlignment="center"
              android:textSize="18sp"
              android:textColor="@color/colorPrimaryDark"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.497"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/nivel_tipo2" />

          <LinearLayout
              android:id="@+id/linearLayout2"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="20dp"
              android:orientation="horizontal"
              android:padding="5dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.494"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/textView6">

              <Button
                  android:id="@+id/bomba1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="10dp"
                  android:layout_marginRight="10dp"
                  android:text="@string/valvula1"
                  android:onClick="activarBombas"
                  android:textColor="@color/icons"
                  android:background="@drawable/style_bombas"/>

              <TextView
                  android:id="@+id/estado_v1"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="10dp"
                  android:layout_marginLeft="10dp"
                  android:text="@string/desactivada"
                  android:textColor="@color/primaryText"
                  android:textSize="20sp" />
          </LinearLayout>

          <LinearLayout
              android:id="@+id/linearLayout4"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="20dp"
              android:orientation="horizontal"
              android:padding="5dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

              <Button
                  android:id="@+id/bomba2"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="10dp"
                  android:layout_marginRight="10dp"
                  android:text="@string/valvula2"
                  android:onClick="activarBombas"
                  android:textColor="@color/icons"
                  android:background="@drawable/style_bombas"/>

              <TextView
                  android:id="@+id/estado_v2"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="10dp"
                  android:layout_marginLeft="10dp"
                  android:text="@string/desactivada"
                  android:textColor="@color/primaryText"
                  android:textSize="20sp" />
          </LinearLayout>

          <LinearLayout
              android:id="@+id/linearLayout6"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="20dp"
              android:orientation="horizontal"
              android:padding="5dp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

              <Button
                  android:id="@+id/bomba3"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginEnd="10dp"
                  android:layout_marginRight="10dp"
                  android:text="@string/valvula3"
                  android:onClick="activarBombas"
                  android:textColor="@color/icons"
                  android:background="@drawable/style_bombas"/>

              <TextView
                  android:id="@+id/estado_v3"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="10dp"
                  android:layout_marginLeft="10dp"
                  android:text="@string/desactivada"
                  android:textColor="@color/primaryText"
                  android:textSize="20sp" />
          </LinearLayout>

          <TextView
              android:id="@+id/textView7"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="20dp"
              android:gravity="center_horizontal"
              android:text="@string/estado"
              android:textAlignment="center"
              android:textSize="18sp"
              android:textColor="@color/primaryText"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.497"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

          <TextView
              android:id="@+id/estado_tipo"
              style="@style/TextAppearance.AppCompat.SearchResult.Subtitle"
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:layout_marginTop="20dp"
              android:text="@string/normal"
              android:textAlignment="center"
              android:textSize="24sp"
              android:textColor="@color/primaryText"
              android:background="@drawable/style_niveles"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.507"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/textView7" />
      </LinearLayout>

   </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>